update the page

--- a/views/changepassword.hbs
+++ b/views/changepassword.hbs
@@ -1,3 +1,5 @@
+
+
 <body>
     <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -8,17 +10,16 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a href="#" class="navbar-brand">
-                    <span class="glyphicon glyphicon-picture"></span>Home</a>
+                <a href="#" class="navbar-brand"><span class="glyphicon glyphicon-picture"></span>Home</a>
             </div>
             <div class="collapse navbar-collapse" id="bbb">
                 <ul class="nav navbar-nav navbar-right">
-                    {{#if user}}
+                    {{#if user}} 
                     <li>
-                        <a href="/logout">logout</a>
+                        <a href="/logout">logout</a> 
                     </li>
                     <li>
-                        <a href="/changepassword">Password Change</a>
+                        <a href="/changepassword">Password Change</a>                         
                     </li>
                     {{else}}
                     <li>
@@ -28,27 +29,24 @@
                     <li>
                         <a href="/register">Sign up</a>
                     </li>
-
+                    
                 </ul>
             </div>
         </div>
     </nav>
+
+    {{#if user}}
     <div class="container">
         <div class="jumbotron">
-            <form action="/register" method="POST">
-                <input type="text" name="username" placeholder="username">
-                <input type="password" name="password" placeholder="password">
-                <input type="password" name="confirm" placeholder="confirm">
-                <input type="submit" value="register">
-            </form>
-            {{#if message}}
-            <p>{{message}}</p>
-            {{/if}}
-        </div>
+            <form action="/changepassword" method="POST">
+        <input type="text" name="username">
+        <input type="password" name="new_password">
+        <input type="submit" value="change password">
+    </form>
+    </div>      
     </div>
-
-
-
+    {{/if}}
 
     <script src="https://code.jquery.com/jquery-2.1.4.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
